drop the redundant species ID

--- a/K_lines_in_band3.tex
+++ b/K_lines_in_band3.tex
@@ -1,48 +1,48 @@
 \begin{table*}[htp]
 \centering
 \caption{All cataloged KCl lines in Band 3}
-\begin{tabular}{cccccccccc}
+\begin{tabular}{ccccccccc}
 \label{tab:K_detections_B3}
-Species & K Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
+K Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
 \hline
-KCl & 41 & 35 & 8 & 12 & 11 & 3092.4 & 0.00041 & 85.80766 & N \\
-KCl & 39 & 37 & 7 & 12 & 11 & 2713.3 & 0.00041 & 85.87379 & N \\
-KCl & 41 & 37 & 3 & 12 & 11 & 1183.9 & 0.00039 & 85.93776 & N \\
-KCl & 41 & 35 & 7 & 12 & 11 & 2720.7 & 0.00042 & 86.33986 & CN \\
-KCl & 39 & 37 & 6 & 12 & 11 & 2339.4 & 0.00041 & 86.40364 & N \\
-KCl & 41 & 37 & 2 & 12 & 11 & 801.6 & 0.00039 & 86.45668 & N \\
-KCl & 41 & 35 & 6 & 12 & 11 & 2345.7 & 0.00042 & 86.87413 & N \\
-KCl & 39 & 37 & 5 & 12 & 11 & 1962.2 & 0.00042 & 86.93553 & N \\
-KCl & 41 & 37 & 1 & 12 & 11 & 416.1 & 0.00040 & 86.97743 & Q \\
-KCl & 41 & 35 & 5 & 12 & 11 & 1967.6 & 0.00042 & 87.41041 & N \\
-KCl & 39 & 37 & 4 & 12 & 11 & 1581.9 & 0.00042 & 87.46938 & N \\
-KCl & 41 & 37 & 0 & 12 & 11 & 27.3 & 0.00040 & 87.50010 & Q \\
-KCl & 39 & 35 & 8 & 12 & 11 & 3127.7 & 0.00044 & 87.77742 & N \\
-KCl & 41 & 35 & 4 & 12 & 11 & 1586.3 & 0.00043 & 87.94866 & N \\
-KCl & 39 & 37 & 3 & 12 & 11 & 1198.3 & 0.00042 & 88.00523 & D \\
-KCl & 39 & 35 & 7 & 12 & 11 & 2751.8 & 0.00045 & 88.32895 & Q \\
-KCl & 41 & 35 & 3 & 12 & 11 & 1201.7 & 0.00043 & 88.48896 & CQ \\
-KCl & 39 & 37 & 2 & 12 & 11 & 811.5 & 0.00042 & 88.54307 & D \\
-KCl & 39 & 35 & 6 & 12 & 11 & 2372.8 & 0.00045 & 88.88253 & N \\
-KCl & 41 & 35 & 2 & 12 & 11 & 813.8 & 0.00043 & 89.03129 & D \\
-KCl & 39 & 37 & 1 & 12 & 11 & 421.4 & 0.00043 & 89.08292 & D \\
-KCl & 39 & 35 & 4 & 13 & 12 & 1609.5 & 0.00058 & 97.49133 & D \\
-KCl & 41 & 35 & 0 & 13 & 12 & 32.8 & 0.00056 & 97.62809 & D \\
-KCl & 41 & 37 & 7 & 14 & 13 & 2690.7 & 0.00061 & 97.85364 & N \\
-KCl & 39 & 35 & 3 & 13 & 12 & 1220.6 & 0.00059 & 98.09753 & D \\
-KCl & 41 & 37 & 6 & 14 & 13 & 2321.0 & 0.00061 & 98.44993 & N \\
-KCl & 39 & 35 & 2 & 13 & 12 & 828.3 & 0.00059 & 98.70595 & D \\
-KCl & 41 & 37 & 5 & 14 & 13 & 1948.2 & 0.00062 & 99.04845 & N \\
-KCl & 39 & 35 & 1 & 13 & 12 & 432.6 & 0.00059 & 99.31663 & D \\
-KCl & 39 & 37 & 8 & 14 & 13 & 3093.3 & 0.00065 & 99.56276 & N \\
-KCl & 41 & 37 & 4 & 14 & 13 & 1572.3 & 0.00062 & 99.64924 & N \\
-KCl & 39 & 35 & 0 & 13 & 12 & 33.6 & 0.00060 & 99.92952 & D \\
-KCl & 41 & 35 & 8 & 14 & 13 & 3101.7 & 0.00066 & 100.10138 & N \\
-KCl & 39 & 37 & 7 & 14 & 13 & 2722.6 & 0.00065 & 100.17822 & N \\
-KCl & 41 & 37 & 3 & 14 & 13 & 1193.2 & 0.00063 & 100.25229 & N \\
-KCl & 41 & 35 & 7 & 14 & 13 & 2730.0 & 0.00067 & 100.72190 & N \\
-KCl & 39 & 37 & 6 & 14 & 13 & 2348.7 & 0.00066 & 100.79603 & Q \\
-KCl & 41 & 37 & 2 & 14 & 13 & 810.9 & 0.00063 & 100.85758 & N \\
+41 & 35 & 8 & 12 & 11 & 3092.4 & 0.00041 & 85.80766 & N \\
+39 & 37 & 7 & 12 & 11 & 2713.3 & 0.00041 & 85.87379 & N \\
+41 & 37 & 3 & 12 & 11 & 1183.9 & 0.00039 & 85.93776 & N \\
+41 & 35 & 7 & 12 & 11 & 2720.7 & 0.00042 & 86.33986 & CN \\
+39 & 37 & 6 & 12 & 11 & 2339.4 & 0.00041 & 86.40364 & N \\
+41 & 37 & 2 & 12 & 11 & 801.6 & 0.00039 & 86.45668 & N \\
+41 & 35 & 6 & 12 & 11 & 2345.7 & 0.00042 & 86.87413 & N \\
+39 & 37 & 5 & 12 & 11 & 1962.2 & 0.00042 & 86.93553 & N \\
+41 & 37 & 1 & 12 & 11 & 416.1 & 0.00040 & 86.97743 & Q \\
+41 & 35 & 5 & 12 & 11 & 1967.6 & 0.00042 & 87.41041 & N \\
+39 & 37 & 4 & 12 & 11 & 1581.9 & 0.00042 & 87.46938 & N \\
+41 & 37 & 0 & 12 & 11 & 27.3 & 0.00040 & 87.50010 & Q \\
+39 & 35 & 8 & 12 & 11 & 3127.7 & 0.00044 & 87.77742 & N \\
+41 & 35 & 4 & 12 & 11 & 1586.3 & 0.00043 & 87.94866 & N \\
+39 & 37 & 3 & 12 & 11 & 1198.3 & 0.00042 & 88.00523 & D \\
+39 & 35 & 7 & 12 & 11 & 2751.8 & 0.00045 & 88.32895 & Q \\
+41 & 35 & 3 & 12 & 11 & 1201.7 & 0.00043 & 88.48896 & CQ \\
+39 & 37 & 2 & 12 & 11 & 811.5 & 0.00042 & 88.54307 & D \\
+39 & 35 & 6 & 12 & 11 & 2372.8 & 0.00045 & 88.88253 & N \\
+41 & 35 & 2 & 12 & 11 & 813.8 & 0.00043 & 89.03129 & D \\
+39 & 37 & 1 & 12 & 11 & 421.4 & 0.00043 & 89.08292 & D \\
+39 & 35 & 4 & 13 & 12 & 1609.5 & 0.00058 & 97.49133 & D \\
+41 & 35 & 0 & 13 & 12 & 32.8 & 0.00056 & 97.62809 & D \\
+41 & 37 & 7 & 14 & 13 & 2690.7 & 0.00061 & 97.85364 & N \\
+39 & 35 & 3 & 13 & 12 & 1220.6 & 0.00059 & 98.09753 & D \\
+41 & 37 & 6 & 14 & 13 & 2321.0 & 0.00061 & 98.44993 & N \\
+39 & 35 & 2 & 13 & 12 & 828.3 & 0.00059 & 98.70595 & D \\
+41 & 37 & 5 & 14 & 13 & 1948.2 & 0.00062 & 99.04845 & N \\
+39 & 35 & 1 & 13 & 12 & 432.6 & 0.00059 & 99.31663 & D \\
+39 & 37 & 8 & 14 & 13 & 3093.3 & 0.00065 & 99.56276 & N \\
+41 & 37 & 4 & 14 & 13 & 1572.3 & 0.00062 & 99.64924 & N \\
+39 & 35 & 0 & 13 & 12 & 33.6 & 0.00060 & 99.92952 & D \\
+41 & 35 & 8 & 14 & 13 & 3101.7 & 0.00066 & 100.10138 & N \\
+39 & 37 & 7 & 14 & 13 & 2722.6 & 0.00065 & 100.17822 & N \\
+41 & 37 & 3 & 14 & 13 & 1193.2 & 0.00063 & 100.25229 & N \\
+41 & 35 & 7 & 14 & 13 & 2730.0 & 0.00067 & 100.72190 & N \\
+39 & 37 & 6 & 14 & 13 & 2348.7 & 0.00066 & 100.79603 & Q \\
+41 & 37 & 2 & 14 & 13 & 810.9 & 0.00063 & 100.85758 & N \\
 \hline
 \end{tabular}
 
