--- a/Na_lines_in_band3.tex
+++ b/Na_lines_in_band3.tex
@@ -1,33 +1,33 @@
 \begin{table*}[htp]
 \centering
 \caption{All cataloged NaCl lines in Band 3}
-\begin{tabular}{cccccccccc}
+\begin{tabular}{ccccccccc}
 \label{tab:Na_detections_B3}
-Species & Na Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
+Na Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
 \hline
-NaCl & 23 & 35 & 8 & 7 & 6 & 4035.4 & 0.00031 & 85.87018 & N \\
-NaCl & 23 & 37 & 5 & 7 & 6 & 2538.2 & 0.00030 & 85.98167 & D \\
-NaCl & 23 & 35 & 7 & 7 & 6 & 3550.1 & 0.00031 & 86.51754 & Q \\
-NaCl & 23 & 37 & 4 & 7 & 6 & 2043.6 & 0.00030 & 86.62109 & D \\
-NaCl & 23 & 35 & 6 & 7 & 6 & 3060.0 & 0.00032 & 87.16921 & D \\
-NaCl & 23 & 37 & 3 & 7 & 6 & 1544.3 & 0.00030 & 87.26464 & D \\
-NaCl & 23 & 35 & 5 & 7 & 6 & 2565.2 & 0.00032 & 87.82519 & D \\
-NaCl & 23 & 37 & 2 & 7 & 6 & 1040.1 & 0.00031 & 87.91232 & D \\
-NaCl & 23 & 35 & 4 & 7 & 6 & 2065.5 & 0.00032 & 88.48549 & D \\
-NaCl & 23 & 37 & 1 & 7 & 6 & 531.1 & 0.00031 & 88.56415 & D \\
-NaCl & 23 & 35 & 3 & 7 & 6 & 1561.0 & 0.00033 & 89.15011 & D \\
-NaCl & 23 & 37 & 0 & 7 & 6 & 17.1 & 0.00031 & 89.22011 & D \\
-NaCl & 23 & 37 & 6 & 8 & 7 & 3032.7 & 0.00045 & 97.53449 & Q \\
-NaCl & 23 & 35 & 8 & 8 & 7 & 4040.1 & 0.00047 & 98.13295 & Q \\
-NaCl & 23 & 37 & 5 & 8 & 7 & 2542.9 & 0.00045 & 98.26052 & Q \\
-NaCl & 23 & 35 & 7 & 8 & 7 & 3554.8 & 0.00047 & 98.87277 & Q \\
-NaCl & 23 & 37 & 4 & 8 & 7 & 2048.4 & 0.00045 & 98.99127 & D \\
-NaCl & 23 & 35 & 6 & 8 & 7 & 3064.8 & 0.00048 & 99.61753 & D \\
-NaCl & 23 & 37 & 3 & 8 & 7 & 1549.1 & 0.00046 & 99.72675 & D \\
-NaCl & 23 & 35 & 5 & 8 & 7 & 2570.0 & 0.00048 & 100.36722 & D \\
-NaCl & 23 & 37 & 2 & 8 & 7 & 1045.0 & 0.00046 & 100.46695 & D \\
-NaCl & 23 & 35 & 4 & 8 & 7 & 2070.4 & 0.00048 & 101.12183 & D \\
-NaCl & 23 & 37 & 1 & 8 & 7 & 536.0 & 0.00047 & 101.21188 & D \\
+23 & 35 & 8 & 7 & 6 & 4035.4 & 0.00031 & 85.87018 & N \\
+23 & 37 & 5 & 7 & 6 & 2538.2 & 0.00030 & 85.98167 & D \\
+23 & 35 & 7 & 7 & 6 & 3550.1 & 0.00031 & 86.51754 & Q \\
+23 & 37 & 4 & 7 & 6 & 2043.6 & 0.00030 & 86.62109 & D \\
+23 & 35 & 6 & 7 & 6 & 3060.0 & 0.00032 & 87.16921 & D \\
+23 & 37 & 3 & 7 & 6 & 1544.3 & 0.00030 & 87.26464 & D \\
+23 & 35 & 5 & 7 & 6 & 2565.2 & 0.00032 & 87.82519 & D \\
+23 & 37 & 2 & 7 & 6 & 1040.1 & 0.00031 & 87.91232 & D \\
+23 & 35 & 4 & 7 & 6 & 2065.5 & 0.00032 & 88.48549 & D \\
+23 & 37 & 1 & 7 & 6 & 531.1 & 0.00031 & 88.56415 & D \\
+23 & 35 & 3 & 7 & 6 & 1561.0 & 0.00033 & 89.15011 & D \\
+23 & 37 & 0 & 7 & 6 & 17.1 & 0.00031 & 89.22011 & D \\
+23 & 37 & 6 & 8 & 7 & 3032.7 & 0.00045 & 97.53449 & Q \\
+23 & 35 & 8 & 8 & 7 & 4040.1 & 0.00047 & 98.13295 & Q \\
+23 & 37 & 5 & 8 & 7 & 2542.9 & 0.00045 & 98.26052 & Q \\
+23 & 35 & 7 & 8 & 7 & 3554.8 & 0.00047 & 98.87277 & Q \\
+23 & 37 & 4 & 8 & 7 & 2048.4 & 0.00045 & 98.99127 & D \\
+23 & 35 & 6 & 8 & 7 & 3064.8 & 0.00048 & 99.61753 & D \\
+23 & 37 & 3 & 8 & 7 & 1549.1 & 0.00046 & 99.72675 & D \\
+23 & 35 & 5 & 8 & 7 & 2570.0 & 0.00048 & 100.36722 & D \\
+23 & 37 & 2 & 8 & 7 & 1045.0 & 0.00046 & 100.46695 & D \\
+23 & 35 & 4 & 8 & 7 & 2070.4 & 0.00048 & 101.12183 & D \\
+23 & 37 & 1 & 8 & 7 & 536.0 & 0.00047 & 101.21188 & D \\
 \hline
 \end{tabular}
 
