--- a/K_lines_in_band6.tex
+++ b/K_lines_in_band6.tex
@@ -1,47 +1,47 @@
 \begin{table*}[htp]
 \centering
 \caption{All cataloged KCl lines in Band 6}
-\begin{tabular}{cccccccccc}
+\begin{tabular}{ccccccccc}
 \label{tab:K_detections_B6}
-Species & K Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
+K Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
 \hline
-KCl & 39 & 37 & 7 & 30 & 29 & 2846.1 & 0.00654 & 214.41527 & N \\
-KCl & 39 & 35 & 6 & 29 & 28 & 2499.6 & 0.00648 & 214.54412 & D \\
-KCl & 41 & 37 & 3 & 30 & 29 & 1316.8 & 0.00626 & 214.57918 & N \\
-KCl & 41 & 35 & 2 & 29 & 28 & 940.8 & 0.00622 & 214.90740 & CQ \\
-KCl & 39 & 35 & 0 & 28 & 27 & 149.7 & 0.00609 & 215.00828 & D \\
-KCl & 39 & 37 & 1 & 29 & 28 & 548.5 & 0.00616 & 215.03464 & CQ \\
-KCl & 41 & 37 & 8 & 31 & 30 & 3187.6 & 0.00668 & 215.09368 & CN \\
-KCl & 41 & 35 & 7 & 30 & 29 & 2854.2 & 0.00665 & 215.57755 & CN \\
-KCl & 39 & 37 & 6 & 30 & 29 & 2473.0 & 0.00659 & 215.73679 & D \\
-KCl & 41 & 37 & 2 & 30 & 29 & 935.3 & 0.00631 & 215.87559 & N \\
-KCl & 39 & 35 & 5 & 29 & 28 & 2118.0 & 0.00653 & 215.88373 & D \\
-KCl & 39 & 37 & 5 & 30 & 29 & 2096.7 & 0.00664 & 217.06391 & Q \\
-KCl & 41 & 37 & 1 & 30 & 29 & 550.6 & 0.00635 & 217.17723 & Q \\
-KCl & 39 & 35 & 4 & 29 & 28 & 1733.2 & 0.00658 & 217.22891 & CD \\
-KCl & 41 & 35 & 0 & 29 & 28 & 156.7 & 0.00631 & 217.54317 & D \\
-KCl & 41 & 37 & 6 & 31 & 30 & 2452.9 & 0.00677 & 217.72366 & N \\
-KCl & 41 & 35 & 5 & 30 & 29 & 2102.8 & 0.00675 & 218.24805 & N \\
-KCl & 39 & 37 & 4 & 30 & 29 & 1717.2 & 0.00668 & 218.39657 & CN \\
-KCl & 41 & 37 & 0 & 30 & 29 & 162.6 & 0.00639 & 218.48414 & CN \\
-KCl & 39 & 35 & 3 & 29 & 28 & 1345.1 & 0.00662 & 218.57971 & D \\
-KCl & 39 & 35 & 6 & 31 & 30 & 2521.2 & 0.00793 & 229.29217 & CD \\
-KCl & 41 & 35 & 2 & 31 & 30 & 962.5 & 0.00761 & 229.68227 & CD \\
-KCl & 39 & 37 & 1 & 31 & 30 & 570.2 & 0.00753 & 229.81880 & D \\
-KCl & 41 & 35 & 7 & 32 & 31 & 2875.9 & 0.00808 & 229.90046 & Q \\
-KCl & 39 & 37 & 6 & 32 & 31 & 2494.7 & 0.00800 & 230.07072 & D \\
-KCl & 41 & 37 & 2 & 32 & 31 & 957.1 & 0.00766 & 230.22070 & Q \\
-KCl & 41 & 37 & 7 & 33 & 32 & 2843.6 & 0.00812 & 230.31852 & CN \\
-KCl & 39 & 35 & 0 & 30 & 29 & 171.4 & 0.00749 & 230.32064 & D \\
-KCl & 39 & 35 & 5 & 31 & 30 & 2139.8 & 0.00798 & 230.72399 & D \\
-KCl & 39 & 35 & 4 & 31 & 30 & 1755.1 & 0.00804 & 232.16185 & D \\
-KCl & 41 & 35 & 0 & 31 & 30 & 178.7 & 0.00771 & 232.49980 & CN \\
-KCl & 41 & 35 & 5 & 32 & 31 & 2124.8 & 0.00819 & 232.74872 & Q \\
-KCl & 39 & 37 & 4 & 32 & 31 & 1739.2 & 0.00812 & 232.90755 & D \\
-KCl & 41 & 37 & 0 & 32 & 31 & 184.6 & 0.00777 & 233.00319 & CN \\
-KCl & 41 & 37 & 5 & 33 & 32 & 2102.9 & 0.00823 & 233.12954 & CN \\
-KCl & 39 & 35 & 3 & 31 & 30 & 1367.1 & 0.00810 & 233.60570 & D \\
-KCl & 39 & 35 & 8 & 32 & 31 & 3285.5 & 0.00860 & 233.72540 & N \\
+39 & 37 & 7 & 30 & 29 & 2846.1 & 0.00654 & 214.41527 & N \\
+39 & 35 & 6 & 29 & 28 & 2499.6 & 0.00648 & 214.54412 & D \\
+41 & 37 & 3 & 30 & 29 & 1316.8 & 0.00626 & 214.57918 & N \\
+41 & 35 & 2 & 29 & 28 & 940.8 & 0.00622 & 214.90740 & CQ \\
+39 & 35 & 0 & 28 & 27 & 149.7 & 0.00609 & 215.00828 & D \\
+39 & 37 & 1 & 29 & 28 & 548.5 & 0.00616 & 215.03464 & CQ \\
+41 & 37 & 8 & 31 & 30 & 3187.6 & 0.00668 & 215.09368 & CN \\
+41 & 35 & 7 & 30 & 29 & 2854.2 & 0.00665 & 215.57755 & CN \\
+39 & 37 & 6 & 30 & 29 & 2473.0 & 0.00659 & 215.73679 & D \\
+41 & 37 & 2 & 30 & 29 & 935.3 & 0.00631 & 215.87559 & N \\
+39 & 35 & 5 & 29 & 28 & 2118.0 & 0.00653 & 215.88373 & D \\
+39 & 37 & 5 & 30 & 29 & 2096.7 & 0.00664 & 217.06391 & Q \\
+41 & 37 & 1 & 30 & 29 & 550.6 & 0.00635 & 217.17723 & Q \\
+39 & 35 & 4 & 29 & 28 & 1733.2 & 0.00658 & 217.22891 & CD \\
+41 & 35 & 0 & 29 & 28 & 156.7 & 0.00631 & 217.54317 & D \\
+41 & 37 & 6 & 31 & 30 & 2452.9 & 0.00677 & 217.72366 & N \\
+41 & 35 & 5 & 30 & 29 & 2102.8 & 0.00675 & 218.24805 & N \\
+39 & 37 & 4 & 30 & 29 & 1717.2 & 0.00668 & 218.39657 & CN \\
+41 & 37 & 0 & 30 & 29 & 162.6 & 0.00639 & 218.48414 & CN \\
+39 & 35 & 3 & 29 & 28 & 1345.1 & 0.00662 & 218.57971 & D \\
+39 & 35 & 6 & 31 & 30 & 2521.2 & 0.00793 & 229.29217 & CD \\
+41 & 35 & 2 & 31 & 30 & 962.5 & 0.00761 & 229.68227 & CD \\
+39 & 37 & 1 & 31 & 30 & 570.2 & 0.00753 & 229.81880 & D \\
+41 & 35 & 7 & 32 & 31 & 2875.9 & 0.00808 & 229.90046 & Q \\
+39 & 37 & 6 & 32 & 31 & 2494.7 & 0.00800 & 230.07072 & D \\
+41 & 37 & 2 & 32 & 31 & 957.1 & 0.00766 & 230.22070 & Q \\
+41 & 37 & 7 & 33 & 32 & 2843.6 & 0.00812 & 230.31852 & CN \\
+39 & 35 & 0 & 30 & 29 & 171.4 & 0.00749 & 230.32064 & D \\
+39 & 35 & 5 & 31 & 30 & 2139.8 & 0.00798 & 230.72399 & D \\
+39 & 35 & 4 & 31 & 30 & 1755.1 & 0.00804 & 232.16185 & D \\
+41 & 35 & 0 & 31 & 30 & 178.7 & 0.00771 & 232.49980 & CN \\
+41 & 35 & 5 & 32 & 31 & 2124.8 & 0.00819 & 232.74872 & Q \\
+39 & 37 & 4 & 32 & 31 & 1739.2 & 0.00812 & 232.90755 & D \\
+41 & 37 & 0 & 32 & 31 & 184.6 & 0.00777 & 233.00319 & CN \\
+41 & 37 & 5 & 33 & 32 & 2102.9 & 0.00823 & 233.12954 & CN \\
+39 & 35 & 3 & 31 & 30 & 1367.1 & 0.00810 & 233.60570 & D \\
+39 & 35 & 8 & 32 & 31 & 3285.5 & 0.00860 & 233.72540 & N \\
 \hline
 \end{tabular}
 
