--- a/Na_lines_in_band6.tex
+++ b/Na_lines_in_band6.tex
@@ -1,21 +1,21 @@
 \begin{table*}[htp]
 \centering
 \caption{All cataloged NaCl lines in Band 6}
-\begin{tabular}{cccccccccc}
+\begin{tabular}{ccccccccc}
 \label{tab:Na_detections_B6}
-Species & Na Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
+Na Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
 \hline
-NaCl & 23 & 35 & 4 & 17 & 16 & 2141.3 & 0.00480 & 214.74232 & CN \\
-NaCl & 23 & 37 & 1 & 17 & 16 & 607.0 & 0.00460 & 214.93871 & D \\
-NaCl & 23 & 37 & 8 & 18 & 17 & 4076.0 & 0.00520 & 216.05316 & N \\
-NaCl & 23 & 37 & 7 & 18 & 17 & 3596.2 & 0.00520 & 217.66504 & Q \\
-NaCl & 23 & 35 & 2 & 17 & 16 & 1128.4 & 0.00490 & 217.98023 & D \\
-NaCl & 23 & 37 & 0 & 18 & 17 & 104.6 & 0.00550 & 229.24605 & D \\
-NaCl & 23 & 37 & 7 & 19 & 18 & 3607.2 & 0.00610 & 229.73281 & CN \\
-NaCl & 23 & 35 & 2 & 18 & 17 & 1139.5 & 0.00580 & 230.77917 & D \\
-NaCl & 23 & 35 & 1 & 18 & 17 & 625.7 & 0.00580 & 232.50998 & D \\
-NaCl & 23 & 35 & 8 & 19 & 18 & 4130.7 & 0.00650 & 232.85904 & Q \\
-NaCl & 23 & 37 & 5 & 19 & 18 & 2633.6 & 0.00620 & 233.16920 & CD \\
+23 & 35 & 4 & 17 & 16 & 2141.3 & 0.00480 & 214.74232 & CN \\
+23 & 37 & 1 & 17 & 16 & 607.0 & 0.00460 & 214.93871 & D \\
+23 & 37 & 8 & 18 & 17 & 4076.0 & 0.00520 & 216.05316 & N \\
+23 & 37 & 7 & 18 & 17 & 3596.2 & 0.00520 & 217.66504 & Q \\
+23 & 35 & 2 & 17 & 16 & 1128.4 & 0.00490 & 217.98023 & D \\
+23 & 37 & 0 & 18 & 17 & 104.6 & 0.00550 & 229.24605 & D \\
+23 & 37 & 7 & 19 & 18 & 3607.2 & 0.00610 & 229.73281 & CN \\
+23 & 35 & 2 & 18 & 17 & 1139.5 & 0.00580 & 230.77917 & D \\
+23 & 35 & 1 & 18 & 17 & 625.7 & 0.00580 & 232.50998 & D \\
+23 & 35 & 8 & 19 & 18 & 4130.7 & 0.00650 & 232.85904 & Q \\
+23 & 37 & 5 & 19 & 18 & 2633.6 & 0.00620 & 233.16920 & CD \\
 \hline
 \end{tabular}
 
