--- a/science.tex
+++ b/science.tex
@@ -10,6 +10,7 @@
 
 \usepackage{scicite}
 \usepackage{xspace}
+\usepackage{ulem}
 
 \usepackage{times}
 \usepackage{graphicx}
@@ -130,9 +131,10 @@ Melvyn Wright\\
  substantial challenge, as disks around high-mass stars are typically observed
  while still embedded in their natal molecular cloud, and thus most molecular
  emission lines do not uniquely trace the disks in these regions. Here, we show
- that two molecular species, NaCl and KCl, appear to uniquely trace the outer
- edges of the disk around Orion \sourcei, the disk around the closest high-mass
- (15~\msun) protostellar system, and are not seen in the disks's natal cloud.
+ that two molecular species, NaCl and KCl, \sout{appear to uniquely} unambigously trace the
+ outer edges of the disk around Orion \sourcei, the closest high-mass
+ (15~\msun) protostellar system. \sout{, and are not seen in the disks's natal cloud.}
+ {\bf [we haven't actually shown that NaCl and KCl are NOT in the cloud - rlp]}
  We have detected more than 50 transitions of these molecules and their
  less common isotopologues toward \sourcei.
  Indeed, the chemical and physical environments of the disk around \sourcei appear to be so
@@ -179,10 +181,12 @@ disk and not the molecule-rich ``hot core'' in the surrounding region
 \cite{Goddi2018a,Cesaroni2017a}.  For low-mass sources, where the disks are
 observed in isolation after the surrounding core has accreted or dispersed,
 this ambiguity is absent.  For high-mass sources, 
-which evolve so quickly that the disks are observed
+which evolve so quickly that the disks are \sout{observed}
 still embedded in their natal hot core, substantial confusion can arise.
-Further complicating matters, the large densities in these regions can result
-in central disks that may be further obscured by dust opacity at wavelengths
+Further complicating matters, \sout{the large densities in these regions can result
+in central disks that may be further obscured by dust opacity}
+the large amount of dust in these dense regions may obscure the disks
+at wavelengths
 shorter than 3 mm.
 
 While dozens of species have been detected in the disks around low-mass stars
@@ -207,24 +211,27 @@ small handful of other AGB and post-AGB stars
 \cite{Milam2007a,Highberger2003a,Sanchez-Contreras2018a}, but to our knowledge,
 no detections outside of these environments have previously been reported.
 
-We have detected NaCl, KCl, and their $^{37}$Cl and $^{41}$K isotopologues in
-the disk around Orion Source I, the closest high-mass protostar at a distance
-$d\approx400$ pc \cite{Grossschedl2018a}.  These emission lines that uniquely
+\sout{We have detected} Here we report the detection of 
+NaCl, KCl, and their $^{37}$Cl and $^{41}$K isotopologues in
+the disk around Orion Source I, the closest high-mass protostar, at a distance
+$d\approx400$ pc \cite{Grossschedl2018a}.  \sout{These emission lines \sout{that} uniquely
 trace the
-disk were previously used to measure the central mass of Source I as 15 \msun,
+disk and were previously used to measure the central mass of Source I, \sout{as 15 \msun,}
 although those
 measurements were performed before the spectral lines were identified as
 belonging to NaCl and KCl
- \cite{Ginsburg2018b}.  Source I is the brightest object in the
+ \cite{Ginsburg2018b}.} Source I is the brightest object in the
 Orion nebula at millimeter wavelengths and is deeply embedded within a hot
 core (though it is moving relative to that core).  It is a system consisting of
 a $\sim10^4$ \lsun central object with a
 photospheric temperature $\approx4000$ K \cite{Testi2010a} surrounded by a
-$\sim0.1$ \msun disk, which we observe nearly edge-on \cite{Plambeck2016a}. The
-central source mass has been debated, with estimates ranging from 7-20 \msun
-\cite{Matthews2010a,Plambeck2016a}, but the highest-resolution data imply a central
-source mass $M\approx15$ \msun from fitting a Keplerian orbital model to \water
-and NaCl emission profiles \cite{Ginsburg2018b}.
+$\sim0.1$ \msun disk, which we observe nearly edge-on \cite{Plambeck2016a}. 
+The source drives a bipolar outflow several thousand AU into the surrounding 
+molecular cloud \cite{Plambeck2009}. The
+central mass has been debated, with estimates ranging from 7-20 \msun
+\cite{Matthews2010a,Plambeck2016a}, but the highest-resolution data imply \sout{a central
+source mass} $M\approx15$ \msun \sout{from fitting a Keplerian orbital model to \water
+and NaCl emission profiles} \cite{Ginsburg2018b}.
 
 % \bam{I removed a sentence in there about the mid-infrared.  I'm not sure what
 % % it adds, and I don't think it's referenced again?  Further, the last
@@ -239,124 +246,20 @@ and NaCl emission profiles \cite{Ginsburg2018b}.
 We performed the observations using the Atacama Large Millimeter/submillimeter
 Array (ALMA) in three spectral bands (from 0.85~--~3~mm) at the highest
 available spatial resolution, from 0.03~--~0.10 arcseconds. The spectral
-resolution ranged from 1.5~--~6.5~\kms.  We noted a
-distinctive morphology in the position-velocity diagrams of several lines,
-showing a clear linear gradient in velocity parallel to the disk. To obtain
+resolution ranged from 1.5~--~6.5~\kms.  
+While the most prominent spectral features were the SiO and \water lines that
+had previously been observed \cite{Goddi2013a,Hirota2014a}, there were dozens
+of lines that remained unidentified in our initial study \cite{Ginsburg2018b}.
+We noted a
+distinctive morphology in the position-velocity diagrams of many of these lines,
+showing a clear linear gradient in velocity parallel to the disk. 
+\sout{To obtain
 higher signal-to-noise in our extracted spectra, we shifted the spectra by
 their measured centroid velocities and averaged them together (essentially
 removing  the Keplerian rotation to produce the equivalent spectrum averaged
 over a non-rotating object), obtaining a disk-averaged spectrum.  We use this
-spectrum to measure and  identify the emission lines (see Methods).
-The peak intensity maps of two bright NaCl lines, showing the morphology of the
-lines and the continuum are shown in Figure 1.
-
-% \bam{I added a parenthetical there trying to clarify for the reader what %
-% shifting the centroid velocities meant.  It's a very technical phrase.  My %
-% parenthetical may be techincally wrong, though?} % nope, it's (to first
-% order) right, that's good
-
-
-
-\begin{figure*}[!htp]
-    %\includegraphics[scale=1,width=2.0in]{{figures/OrionSourceI_NaClv=3_7-6_robust0.5.maskedclarkclean10000_medsub_K_peak_offset_contours}.pdf}
-    \includegraphics[scale=1,width=3.25in]{{figures/OrionSourceI_NaClv=1_18-17_robust0.5.maskedclarkclean10000_medsub_K_peak_offset_contours}.pdf}
-    \includegraphics[scale=1,width=3.25in]{{figures/OrionSourceI_NaClv=2_26-25_robust0.5.maskedclarkclean10000_medsub_K_peak_offset_contours}.pdf}
-\caption{Peak intensity images of NaCl lines in band 6 and 7 showing the spatial
-distribution of the emission.  
-%From left to right, the lines are: 87.26 GHz NaCl v=3 J=7-6,
-The lines shown are
-232.51 GHz NaCl v=1 J=18-17 (left), and 333.01 GHz NaCl v=2 J=26-25 (right).
-%These are the brightest uncontaminated lines in each of their observing bands.
-The red contours show the Band 6 226 GHz continuum at levels of 50, 300, and 500 K.
-White contours are shown at 50, 100, and 150 K.
-The red and blue ellipses show the beams for the continuum and the line emission,
-respectively.  The beam sizes are
-%$0.10 \arcsec \times 0.08 \arcsec$, PA $40.6 \degrees$,
-$0.043 \arcsec \times 0.034 \arcsec$, PA $-87.4 \degrees$ and
-$0.029 \arcsec \times 0.022 \arcsec$, PA $-54.6 \degrees$, respectively.
-}
-\label{fig:spatial}
-\end{figure*}
-
-
-While the most prominent spectral features were the SiO and \water lines that
-have previously been observed \cite{Goddi2013a,Hirota2014a}, there were dozens
-of lines that remained unidentified in our initial study \cite{Ginsburg2018b}.
-We have now identified these lines as transitions of NaCl and KCl, noting the
-excellent correspondence (see Figure 2) between the observed and measured/catalogued
-frequencies \cite{Caris2002a,Caris2004a,Muller2005a,Lovas2005b,Pickett1998a}.
-We additionally searched databases of transitions of these same species with
-more quanta of vibrational excitation, and found additional matches
-\cite{Barton2014a,Cabezas2016a}, with confident detections up to as much as
-$v=6$.
-
-%AG: the v=7 detections are <5-sigma; they're probably real, but not confident.
-
-The emission from these lines comes
-from a narrow range in both position and velocity.  By fitting thin Keplerian
-disk models to the position-velocity diagrams of the lines, we constrain the
-emission region to be 30-60 AU from the central source.  The observed emission
-peaks at $\pm13$ AU above and below the midplane of the continuum disk, which
-may be either a physical height or an effect of obscuration by the optically
-thick continuum.  The emission does not extend beyond this height, indicating
-that, unlike SiO and \water, the salts do not trace the outflow.
-
-%BAM: We aren't allowed to tell the reader how to feel (in Science).  Meaning,
-%we can't say something is 'surprising.'  That's up to the reader to decide.
-%no "we were shocked to see shocks"?  Boo.
-
-Once in the gas phase, however, we expect salts to rapidly deplete back into
-dust grains \cite{Cherchneff2012a}.  Since we observe them in emission, with
-narrow velocity line profiles, they must be released into the gas phase either
-by grain destruction or sputtering, or produced by chemical reactions from
-simple gas-phase precursors, i.e., either neutral or
-ionized elemental Na and K with Cl or HCl.  Because previous studies have
-failed to detect any atomic recombination lines from atomic ions recombining
-with electrons in this
-source \cite{Plambeck2016a,Baez-Rubio2018a}, the gas-phase route is
-less likely. We therefore suggest that the salts are produced by dust
-destruction, either via sputtering by high-energy particles \cite{Schilke1997a}
-or by thermal desorption of the outer layers of dust particles
-\cite{Decin2016a}.  The SiO emission seen in the outflow confirms that dust
-destruction is occurring as
-part of the outflow launch process.
-
-%Since we see SiO tracing
-%the outflow, and SiO is also released by grain destruction, we infer that...
-%The small scale
-%height of the observed salt emission therefore implies that grain destruction
-%is an efficient and rapid process in disk-launched winds.
-
-%Again, we can present our viewpoint based on the data, but it's up to the
-%reader to decide if that is what 'must' be happening.
-
-The detection of highly vibrationally excited transitions of these species,
-with upper-state energy levels as high as $\sim$3000~K, is suggestive of
-extreme physical or radiative conditions.
-%The vibrationally excited transitions observed suggest that radiative
-%excitation is important in this environment.
-The NaCl transitions we observe have  Einstein A values in the range
-$A\sim10^{-3}-10^{-2}$ s$^{-1}$, while the vibrationally excited states have
-infrared transitions with rates $A\sim1$ s$^{-1}$
-\cite{Barton2014a,Cabezas2016a}.  The collision rates into the $v=0$
-states are $C\sim10^{-11}$ cm$^3$ s$^{-1}$ (insensitive to temperature),
-while collision rates into $v>0$ states from $v=0$ states are lower,
-$C\sim10^{-13}-10^{-12}$ cm$^3$ s$^{-1}$ at $T=1000$ K, but only
-$C < 10^{-15}$  cm$^3$ s$^{-1}$ at $T=100$ K \cite{Quintana-Lacaci2016a}.
-Extremely high
-gas temperatures and densities would be required to excite a significant
-population of the molecules into vibrational states.
-Furthermore, collisional excitation alone cannot explain the different
-vibrational states being observed at a similar brightness level. However, the
-rovibrational $\Delta v=1$ transitions of NaCl and KCl occur in the 25-35 \um
-and 35-45 \um range, respectively.  Since a blackbody with $T\sim100$ K peaks
-at $\lambda\sim30$ \um, and the observed disk brightness temperature is around
-100-300 K at the radii where salts are observed, it is plausible that strong
-radiation from the disk in the mid-infrared is responsible for exciting the
-molecules.  We have not been able to assemble a self-consistent model
-explaining both the rotational and vibrational excitation ladders of NaCl or
-KCl, so in the supplemental material, we describe  and evaluate several
-additional possible excitation mechanisms that are not ruled out.
+spectrum to measure and  identify the emission lines (see Methods).} {\bf [seems
+like these details could be left for the supplemental materials- rlp]}
 
 \begin{figure}
     \begin{tabular}{lr}
@@ -385,6 +288,121 @@ additional possible excitation mechanisms that are not ruled out.
 \end{figure}
 
 
+We have now identified these lines as transitions of NaCl and KCl, noting the
+excellent correspondence (see Figure 1) between the observed and measured/catalogued
+frequencies \cite{Caris2002a,Caris2004a,Muller2005a,Lovas2005b,Pickett1998a}.
+We additionally searched databases of transitions of these same species with
+more quanta of vibrational excitation, and found additional matches
+\cite{Barton2014a,Cabezas2016a}, with confident detections up to \sout{as much as}
+vibrational level 
+$v=6$.
+
+% We noted a
+% distinctive morphology in the position-velocity diagrams of severa
+
+% \bam{I added a parenthetical there trying to clarify for the reader what %
+% shifting the centroid velocities meant.  It's a very technical phrase.  My %
+% parenthetical may be techincally wrong, though?} % nope, it's (to first
+% order) right, that's good
+
+
+\begin{figure*}[!htp]
+    %\includegraphics[scale=1,width=2.0in]{{figures/OrionSourceI_NaClv=3_7-6_robust0.5.maskedclarkclean10000_medsub_K_peak_offset_contours}.pdf}
+    \includegraphics[scale=1,width=3.25in]{{figures/OrionSourceI_NaClv=1_18-17_robust0.5.maskedclarkclean10000_medsub_K_peak_offset_contours}.pdf}
+    \includegraphics[scale=1,width=3.25in]{{figures/OrionSourceI_NaClv=2_26-25_robust0.5.maskedclarkclean10000_medsub_K_peak_offset_contours}.pdf}
+\caption{Peak intensity images of NaCl lines in band 6 and 7 showing the spatial
+distribution of the emission.  
+%From left to right, the lines are: 87.26 GHz NaCl v=3 J=7-6,
+The lines shown are
+232.51 GHz NaCl v=1 J=18-17 (left), and 333.01 GHz NaCl v=2 J=26-25 (right).
+%These are the brightest uncontaminated lines in each of their observing bands.
+The red contours show the Band 6 226 GHz continuum at levels of 50, 300, and 500 K.
+White contours are shown at 50, 100, and 150 K.
+The red and blue ellipses show the beams for the continuum and the line emission,
+respectively.  The beam sizes are
+%$0.10 \arcsec \times 0.08 \arcsec$, PA $40.6 \degrees$,
+$0.043 \arcsec \times 0.034 \arcsec$, PA $-87.4 \degrees$ and
+$0.029 \arcsec \times 0.022 \arcsec$, PA $-54.6 \degrees$, respectively.
+}
+\label{fig:spatial}
+\end{figure*}
+
+%AG: the v=7 detections are <5-sigma; they're probably real, but not confident.
+
+The peak intensity maps of two of the bright NaCl lines \sout{showing the morphology of the
+lines and the continuum} are shown in Figure 2.
+The emission from these lines comes
+from a narrow range in both position and velocity.  By fitting thin Keplerian
+disk models to the position-velocity diagrams of the lines, we constrain the
+emission region to be 30-60 AU from the central source.  The observed emission
+peaks at $\pm13$ AU above and below the midplane of the continuum disk, which
+may be either a physical height or an effect of obscuration by the optically
+thick continuum.  The emission does not extend beyond this height, indicating
+that, unlike SiO and \water, the salts do not trace the bipolar outflow.
+
+%BAM: We aren't allowed to tell the reader how to feel (in Science).  Meaning,
+%we can't say something is 'surprising.'  That's up to the reader to decide.
+%no "we were shocked to see shocks"?  Boo.
+
+\sout{Once in the gas phase, however, we expect salts to rapidly deplete back into
+dust grains \cite{Cherchneff2012a}.}
+Salts in the interstellar medium are expected to be bound to dust grains \cite{Cherchneff2012a}.  
+% The narrow spectral lines that we observe originate from molecules in the gas phase, however.
+Since we observe them in emission, with
+narrow velocity line profiles, they must be released from the grains into the gas phase 
+\sout{either
+by grain destruction or sputtering,} or produced by chemical reactions from
+simple gas-phase precursors, \sout{i.e., either neutral or
+ionized elemental Na and K with Cl or HCl.} e.g., ionized Na or K.  Because previous studies have
+failed to detect any recombination lines from atomic ions recombining
+with electrons in this
+source \cite{Plambeck2016a,Baez-Rubio2018a}, the gas-phase route is
+less likely. We therefore suggest that the salts are produced by dust
+destruction, either via sputtering by high-energy particles \cite{Schilke1997a}
+or by thermal desorption of the outer layers of dust particles
+\cite{Decin2016a}.  The SiO emission seen in the outflow confirms that dust
+destruction is occurring as
+part of the outflow launch process.
+
+%Since we see SiO tracing
+%the outflow, and SiO is also released by grain destruction, we infer that...
+%The small scale
+%height of the observed salt emission therefore implies that grain destruction
+%is an efficient and rapid process in disk-launched winds.
+
+%Again, we can present our viewpoint based on the data, but it's up to the
+%reader to decide if that is what 'must' be happening.
+
+The detection of highly vibrationally excited transitions of these species,
+with upper-state energy levels as high as $\sim$3000~K, is suggestive of
+extreme physical or radiative conditions.  
+%The vibrationally excited transitions observed suggest that radiative
+%excitation is important in this environment.
+The NaCl transitions we observe have  Einstein A values in the range
+$A\sim10^{-3}-10^{-2}$ s$^{-1}$, while the vibrationally excited states have
+infrared transitions with rates $A\sim1$ s$^{-1}$
+\cite{Barton2014a,Cabezas2016a}.  The collision rates into the $v=0$
+states are $C\sim10^{-11}$ cm$^3$ s$^{-1}$ (insensitive to temperature),
+while collision rates into $v>0$ states from $v=0$ states are lower,
+$C\sim10^{-13}-10^{-12}$ cm$^3$ s$^{-1}$ at $T=1000$ K, but only
+$C < 10^{-15}$  cm$^3$ s$^{-1}$ at $T=100$ K \cite{Quintana-Lacaci2016a}.
+Thus, extremely high
+gas temperatures and densities would be required to collisionally excite a significant
+population of the molecules into vibrational states; 
+collisional excitation alone also cannot explain different
+vibrational states being observed at a similar brightness level.  However, the
+rovibrational $\Delta v=1$ transitions of NaCl and KCl occur in the 25-35 \um
+and 35-45 \um range, respectively.  Since a blackbody with $T\sim100$ K peaks
+at $\lambda\sim30$ \um, and the observed disk brightness temperature is around
+100-300 K at the radii where salts are observed, it is plausible that strong
+radiation from the disk in the mid-infrared is responsible for exciting the
+molecules. We have not been able to assemble a self-consistent model
+explaining both the rotational and vibrational excitation \sout{ladders} of NaCl or
+KCl, so in the supplemental material, we describe and evaluate several additional
+possible excitation mechanisms for these molecules.
+{\bf [I think this paragraph may be too detailed for the main text - rlp]}
+
+
 % The detection of NaCl and KCl in our current dataset was serendipitous.  As a
 % result, the observations were not optimized for unraveling the physical and
 % chemical conditions underlying their presence and excitation, hindering our
@@ -392,20 +410,23 @@ additional possible excitation mechanisms that are not ruled out.
 % tracers.  Nevertheless, we obtain several important conclusions from these
 % detections.
 
-We conclude that these newly detected transitions uniquely trace the disk
-around a massive protostar.  Since they appear to be an unambiguous tracer of
-high-mass protostellar disks, if they behave the same in other high-mass disks,
-they will facilitate kinematic measurements of disks and therefore direct mass
-measurements of the contained stars.  Access to such a tool would finally make
+We conclude that the newly detected transitions of NaCl and KCl 
+uniquely trace the disk
+around a massive protostar.  \sout{Since they appear to be an unambiguous tracer of
+high-mass protostellar disks, if they behave the same in other high-mass disks,}
+If these species can be detected toward other high-mass protostars,
+they will facilitate kinematic measurements of disks, \sout{and therefore}
+allowing direct mass
+measurements of the \sout{contained} central stars.  Access to such a tool would finally make
 direct comparisons between high- and low-mass star formation possible.
 
 Since these molecules contain atoms usually trapped in dust and therefore
 rarely seen in the molecular ISM, they may serve as a tool for directly
-measuring absolute metallicity in an environment that is typically far too
+measuring absolute metallicity in environments that are typically far too
 chemically complex and obscured for other methods to work.  Since these
 species are released into the ISM only by supernovae, these transitions
 could prove a powerful probe of supernova feedback in high-extinction
-regions. % this is pretty far-fetched...
+regions. {\bf[  this is pretty far-fetched...]}
 
 % Of these species,
 % Na is produced only in massive star supernovae, while K and Cl are produced in
