--- a/science.tex
+++ b/science.tex
@@ -97,6 +97,7 @@
 Adam Ginsburg\\
 \nraojansky\\
 e-mail: aginsbur@nrao.edu; adam.g.ginsburg@gmail.com\\
+ORCID: 0000-0001-6431-9633 \\
 Brett McGuire\\
 \hubble\\
 \nraocv\\
@@ -317,8 +318,8 @@ model that matches all of the line intensities.
 
 These species provide some of the first tools for probing the dust destruction
 zone in molecular outflows.  Since they appear in such a narrow physical region
-between the disk and the outflow, they may reveal the structure of dust particles
-in high-mass disks.  
+between the disk and the outflow, they may help decipher the structure of dust
+particles in high-mass disks.  
 % Because of the broad number of detected transitions, they
 % can be used to measure gas temperature and density and the local radiation field.
 
