--- a/extracted.bib
+++ b/extracted.bib
@@ -157,6 +157,31 @@
   eid =           {119},
 }
 
+@article{Plambeck2009a,
+  author =        {{Plambeck}, R.~L. and {Wright}, M.~C.~H. and
+                   {Friedel}, D.~N. and {Widicus Weaver}, S.~L. and
+                   {Bolatto}, A.~D. and {Pound}, M.~W. and
+                   {Woody}, D.~P. and {Lamb}, J.~W. and {Scott}, S.~L.},
+  journal =       {\apjl},
+  month =         oct,
+  pages =         {L25-L28},
+  title =         {{Tracing the Bipolar Outflow from Orion Source I}},
+  volume =        {704},
+  year =          {2009},
+  abstract =      {Using CARMA, we imaged the 87 GHz SiO v = 0 J = 2-1
+                   line toward Orion-KL with 0farcs45 angular
+                   resolution. The maps indicate that radio source I
+                   drives a bipolar outflow into the surrounding
+                   molecular cloud along a NE-SW axis, in agreement with
+                   the model of Greenhill et al. The extended
+                   high-velocity outflow from Orion-KL appears to be a
+                   continuation of this compact outflow. High-velocity
+                   gas extends farthest along a NW-SE axis, suggesting
+                   that the outflow direction changes on timescales of a
+                   few hundred years.},
+  doi =           {10.1088/0004-637X/704/1/L25},
+}
+
 @article{Goddi2009a,
   author =        {{Goddi}, C. and {Greenhill}, L.~J. and
                    {Humphreys}, E.~M.~L. and {Matthews}, L.~D. and
