--- a/science.tex
+++ b/science.tex
@@ -214,7 +214,7 @@ It is a system consisting of a $\sim10^4$ \lsun central object with a
 photospheric temperature $\approx4000$ K \cite{Testi2010a} surrounded by a
 $\sim0.1$ \msun disk \cite{Plambeck2016a}, which we observe nearly edge-on
 \cite{Matthews2010a}.  The source drives a bipolar outflow several thousand AU
-into the surrounding molecular cloud \cite{Plambeck2009}. The central mass has
+into the surrounding molecular cloud \cite{Plambeck2009a}. The central mass has
 been debated, with estimates ranging from 7-20 \msun
 \cite{Matthews2010a,Plambeck2016a}, but the highest-resolution data imply
 $M\approx15$ \msun  \cite{Ginsburg2018b}.
