--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -35,7 +35,7 @@ around a `high-mass' ($M>8$ \msun) star
 \citep{Hirota2014a,Plambeck2016a,Ginsburg2018b}.  It is also in many ways
 a unique source, being the only known protostellar object with SiO and \water
 masers in an outflow
-\citep{Goddi2009a,Matthews2010a,Goddi2010a,Niederhofer2012a,Greenhill2013a}.
+\citep{Plambeck2009a,Goddi2009a,Matthews2010a,Goddi2010a,Niederhofer2012a,Greenhill2013a}.
 In \citet{Ginsburg2018b}, a subset of the authors reported 0.03$\arcsec$ ALMA
 observations of \sourcei that allowed us to measure the outer rotation curve of
 the 5(5,0)-6(4,3) \water line in the disk and along the base of the outflow;
