fix formatting issues that made the pdf not work for Science

--- a/science.tex
+++ b/science.tex
@@ -1,5 +1,6 @@
 % Use only LaTeX2e, calling the article.cls class and 12-point type.
 
+\pdfminorversion=4
 \documentclass[12pt]{article}
 
 % Users of the {thebibliography} environment or BibTeX should use the
@@ -38,8 +39,6 @@
 \begin{quote} \bf  }
 {\end{quote}}
 
-\usepackage{xcolor}
-\newcommand{\bam}[1]{\textcolor{green!65!black}{\textbf{[BAM: #1]}}}
 
 \def\ee#1{\ensuremath{\times10^{#1}}}
 \newcommand{\degrees}{\ensuremath{^{\circ}}}
@@ -363,19 +362,19 @@ formation possible.
 \begin{scilastnote}
 \item[] \textbf{Supplementary Materials}
 
-\vspace{-1em}
+%\vspace{-1em}
 www.sciencemag.org
 
-\vspace{-1em}
+%\vspace{-1em}
 Materials and Methods
 
-\vspace{-1em}
+%\vspace{-1em}
 Figures S1, S2
 
-\vspace{-1em}
+%\vspace{-1em}
 Tables S1, S2, S3, S4, S5
 
-\vspace{-1em}
+%\vspace{-1em}
 References (39-56)
 
 \item[] \textbf{Acknowledgements}
@@ -429,16 +428,16 @@ Melvyn Wright\\
 %\vspace{-1em}
 %www.sciencemag.org
 
-\vspace{-1em}
+%\vspace{-1em}
 Materials and Methods
 
-\vspace{-1em}
+%\vspace{-1em}
 Figures S1, S2
 
-\vspace{-1em}
+%\vspace{-1em}
 Tables S1, S2, S3, S4, S5
 
-\vspace{-1em}
+%\vspace{-1em}
 References (39-56)
 
  \end{scilastnote}
