--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -20,12 +20,16 @@
     the first ever detection of the vibrationally excited states of these
     lines in the ISM above $v=1$, with firm detections up to $v=6$.
     The salt emission traces the region just above the continuum disk,
-    possibly forming the base of the outflow.  We examine several possible
-    explanations of the observed high excitation lines, concluding that the
-    vibrational states are most likely to be radiatively excited via
+    possibly forming the base of the outflow.  The emission from the
+    vibrationally excited transitions is inconsistent with a single
+    temperature, implying the lines are not in LTE.  We examine several
+    possible explanations of the observed high excitation lines, concluding
+    that the vibrational states are most likely to be radiatively excited via
     rovibrational transitions in the 25-35 \um (NaCl) and 35-45 \um (KCl)
-    range.  These molecules may provide a unique toolkit for measuring
-    the radiation environment around accreting young stars.
+    range.  We suggest that the molecules are produced by destruction of dust
+    particles.  Because these molecules are so rare, they are potentially
+    unique tools for identifying high-mass protostellar disks and measuring the
+    radiation environment around accreting young stars.
 \end{abstract}
 
 \section{Introduction}
@@ -58,27 +62,60 @@ KCl and their isotopologues, many in excited vibrational levels.
 % \citep{Girart2017a}.  Beyond these two sources, only disordered structures or
 % disk-envelope blends have been observed.
 
-While the disk around Source I has been seen in several lines and confirmed
-to have a Keplerian rotation curve, such disks are rarely observed around massive
-stars.  Toward most accreting high-mass stars, the spectrum is dominated by
-the surrounding hot core \citep{Cesaroni2017a,Goddi2018a}.  By contrast, the
-disks around low-mass stars are often easily distinguished from their surroundings,
-either because they retain a disk after blowing away the parent core, or because
-the core is cooler and fewer lines are excited.  The identification of lines that
-trace disks around high-mass stars is therefore an important goal.
+% While the disk around Source I has been seen in several lines and confirmed
+% to have a Keplerian rotation curve, such disks are rarely observed around massive
+% stars.  Toward most accreting high-mass stars, the spectrum is dominated by
+% the surrounding hot core \citep{Cesaroni2017a,Goddi2018a}.  By contrast, the
+% disks around low-mass stars are often easily distinguished from their surroundings,
+% either because they retain a disk after blowing away the parent core, or because
+% the core is cooler and fewer lines are excited.  The identification of lines that
+% trace disks around high-mass stars is therefore an important goal.
 
 
+Disks are ubiquitous around forming stars of any mass.  They provide the main
+mechanism for mediating accretion, and, via outflows, shedding angular momentum
+from the system.  Despite their theoretical importance, the role of disks in
+high-mass star formation remains observationally uncertain, since the only
+definitive disk detections are around stars that have already acquired most of
+their mass \citep[e.g.,][]{Girart2017a}.  The lack of clear disk detections
+is, at least in part, because there were no known spectral lines that trace a
+disk and not the molecule-rich ``hot core'' in the surrounding region
+\cite{Goddi2018a,Cesaroni2017a}.  For low-mass sources, where the disks are
+observed in isolation after the surrounding core has accreted or dispersed,
+this ambiguity is absent.  For high-mass sources, which evolve so quickly that
+the disks are still embedded in their natal hot core, substantial confusion can
+arise.  Further complicating matters, the large amount of dust in these dense
+regions may obscure the disks at wavelengths shorter than 3 mm.
 
-Molecules consisting of alkali metals and halogens have only rarely been
-detected in space \citep{McGuire2018c}.
-Because of their rarity, their use as a diagnostic
-tool to measure metallicity and local physical conditions has been limited.
-%\rlp{I would consider adding a sentence about how we will use these lines
-%to study conditions in Source I, and move the rest of this material to the discussion.}
-However, some of these molecules, such as KCl and NaCl, have a rich spectrum
-with dozens of lines arising in a single observing band with modern
-instrumentation, so they have great potential to probe either local gas properties
-or the radiation field when they are detected.
+While dozens of species have been detected in the disks around low-mass stars
+\citep{McGuire2018c}, these molecules are comprised solely of a small selection
+of elements: H, C, N, O, and S.  All of the molecules seen in disks are also
+prevalent in the ISM, particularly in the hot cores surrounding high-mass stars
+\citep{Nummelin1998a,Belloche2013a}. In high-mass environments, this therefore
+limits their utility as unique disk tracers, hiding the kinematic signatures of
+rotation.
+
+
+% At the other extreme of the stellar life cycle, in the atmospheres of dying
+% stars, a wealth of exotic molecules -- those containing rare elements not
+% commonly seen in star-forming regions -- are observed.  Stars along the
+% asymptotic giant branch (AGB) lose substantial mass in slow winds
+% \citep{Herwig2005a} that form molecules with high atomic weight elements that
+% rapidly condense onto dust particles.  The most notable example is that of
+% IRC+10216, the expanding gas cloud around the AGB star CW Leonis.  Here, NaCl,
+% KCl, AlCl, AlF, NaCN, and a number of other metal-bearing (in the chemists'
+% sense) molecules have been detected \citep{Agundez2012a,Zack2011a}.  NaCl and
+% KCl have been detected around a small handful of other AGB and post-AGB stars
+% \citep{Milam2007a,Highberger2003a,Sanchez-Contreras2018a}, but to our knowledge,
+% no detections outside of these environments have previously been reported.
+
+Molecules consisting of alkali metals and halogens have only rarely
+been detected in space \citep{McGuire2018c}.  Because of their rarity, their
+use as a diagnostic tool to measure metallicity and local physical conditions
+has been limited.  However, some of these molecules, such as KCl and NaCl, have
+a rich spectrum with dozens of lines arising in a single observing band with
+modern instrumentation, so they have great potential to probe either local gas
+properties or the radiation field when they are detected.
 
 
 KCl and NaCl have so far been observed toward evolved stars including the
@@ -191,8 +228,8 @@ unidentified in the B6 and B7 spectra, though there are over a dozen in B3 that
 we have not identified. 
 
 We also tentatively identify broad lines at 229.7 GHz and 344.4 GHz as AlO.  If
-the identification is correct, these lines are broad because of the rich hyperfine
-spectrum of AlO.
+the identification is correct, these lines are broad because of the rich
+hyperfine spectrum of AlO.
 
 % I count 15 unidentified emission lines in B3; I added "emission" above 
 % because there are lots of unidentified absorption lines from foreground gas. - Dick
@@ -201,26 +238,26 @@ spectrum of AlO.
 %\emph{some} of the lines that were not detected because of severe confusion
 
 \begin{figure*}[!htp]
-\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B3_spw0_robust0.5.pdf}
-\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B3_spw1_robust0.5.pdf}
-\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B3_spw2_robust0.5.pdf}
-\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B3_spw3_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/color_labels_OrionSourceI_B3_spw0_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/color_labels_OrionSourceI_B3_spw1_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/color_labels_OrionSourceI_B3_spw2_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/color_labels_OrionSourceI_B3_spw3_robust0.5.pdf}
 \caption{Stacked spectra  B3}
 \label{fig:spectrab3}
 \end{figure*}
 \begin{figure*}[!htp]
-\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B6_spw0_robust0.5.pdf}
-\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B6_spw1_robust0.5.pdf}
-\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B6_spw2_robust0.5.pdf}
-\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B6_spw3_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/color_labels_OrionSourceI_B6_spw0_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/color_labels_OrionSourceI_B6_spw1_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/color_labels_OrionSourceI_B6_spw2_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/color_labels_OrionSourceI_B6_spw3_robust0.5.pdf}
 \caption{Stacked spectra B6}
 \label{fig:spectrab6}
 \end{figure*}
 \begin{figure*}[!htp]
-\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B7.lb_spw0_robust0.5.pdf}
-\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B7.lb_spw1_robust0.5.pdf}
-\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B7.lb_spw2_robust0.5.pdf}
-\includegraphics[scale=1,width=5.5in]{figures/lines_labeled_OrionSourceI_B7.lb_spw3_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/color_labels_OrionSourceI_B7.lb_spw0_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/color_labels_OrionSourceI_B7.lb_spw1_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/color_labels_OrionSourceI_B7.lb_spw2_robust0.5.pdf}
+\includegraphics[scale=1,width=5.5in]{figures/color_labels_OrionSourceI_B7.lb_spw3_robust0.5.pdf}
 \caption{Stacked spectra B7}
 \label{fig:spectrab7}
 \end{figure*}
@@ -229,10 +266,10 @@ spectrum of AlO.
 In Tables \ref{tab:all_detections_B3}-\ref{tab:all_detections_B7}, we list all
 of the salt lines in vibrational energy levels up to v=8 that lie within our
 observed bands and whether or not they were detected.  We employ the following
-flag scheme: `d' for detection, `n' for nondetection, `q' for questionable
+flag scheme: `D' for detection, `N' for nondetection, `Q' for questionable
 (e.g., low signal-to-noise, but possibly detected, or in regions where the
 noise is not Gaussian and may be affected by other lines).  We additionally
-include a flag `c' for `confused', which we add to the flag string if the line
+include a flag `C' for `confused', which we add to the flag string if the line
 is blended with another brighter line of a different species.  There are robust
 detections of about 60 lines, up to the v=6 vibrational level.
 
@@ -294,9 +331,15 @@ error was merely a transcription error of some sort.
 % JPL, and SLAIM.  The latter three, catalogued in Splatalogue, agree, and they
 % agree better with my measurements.}
 
-\input{lines_in_band3.tex}
-\input{lines_in_band6.tex}
-\input{lines_in_band7.tex}
+%\input{lines_in_band3.tex}
+%\input{lines_in_band6.tex}
+%\input{lines_in_band7.tex}
+\input{Na_lines_in_band3.tex}
+\input{Na_lines_in_band6.tex}
+\input{Na_lines_in_band7.tex}
+\input{K_lines_in_band3.tex}
+\input{K_lines_in_band6.tex}
+\input{K_lines_in_band7.tex}
 
 %The low observed brightness temperatures suggest that the emission from
 %these lines is optically thin.
@@ -335,7 +378,7 @@ conditions in the \sourcei salt emission regions.
 % CRL2688 post-AGB * \citep{Highberger2003a} ~ 1 kpc
 % IK Tauri, VY Canis Majoris \citep{Milam2007a}
 
-\subsection{Where is the emission coming from?}
+\subsection{Spatial distribution of the salt emission}
 \label{sec:wherefrom}
 In \sourcei, the salt lines originate from the surface layers of the disk (the Band 7
 lines exhibit NaCl emission peaks at $\pm0.032\arcsec=13$ AU above the disk),
@@ -502,12 +545,12 @@ Below, we explore several mechanisms for the observed line excitation:
 % observations such that a single-zone, single temjperature model does not apply.
 %
 \citet{Quintana-Lacaci2016a} calculated collision rates for NaCl with He and
-provided a Fortran code to compute those rates.  Typical collision rate coefficients for
-\hbox{$\Delta$J=1} or \hbox{$\Delta$J=2} transitions are $10^{-10}$~cm$^3$ \pers.  Making the usual
-assumption that the collision rates with \hh are similar to those for He, we used
-RADEX \citep{van-der-Tak2007a} to examine the excitation \footnote{The
-RADEX-compatible molecular data
-file incorporating these coefficients is available from
+provided a Fortran code to compute those rates.  Typical collision rate
+coefficients for \hbox{$\Delta$J=1} or \hbox{$\Delta$J=2} transitions are
+$10^{-10}$~cm$^3$ \pers.  Making the usual assumption that the collision rates
+with \hh are similar to those for He, we used RADEX \citep{van-der-Tak2007a} to
+examine the excitation \footnote{The RADEX-compatible molecular data file
+incorporating these coefficients is available from
 \url{https://github.com/keflavich/SaltyDisk/blob/\githash/nacl.dat}}.
 % For T=100 K, $\delta v=1$ \kms \perpc, $N_{NaCl}=10^{12}$ \persc,
 % \footnote{\rlp{presumably,
@@ -517,13 +560,26 @@ file incorporating these coefficients is available from
 % and the velocity gradient affects the optical depth.  These are fiducial,
 % poorly-justified parameters, but I think they're a good first guess.}
 % }
-The critical density is $n_{cr}\sim10^8$ \percc for the $v=0$
-states and $n_{cr}\sim10^{12}$ for the $v>=1$ states, where $v$ is the
-vibrational state quantum number.  These high critical densities effectively
-rule out collisional excitation producing vibrationally excited states,
-since at such high densities, the rotational $v=0$ states would necessarily
-be thermalized to the same temperature as the vibrational states, contrary
-to what we observe.
+%The critical density is $n_{cr}\sim10^8$ \percc for the $v=0$
+%states and $n_{cr}\sim10^{12}$ for the $v>=1$ states, where $v$ is the
+%vibrational state quantum number.  These high critical densities effectively
+%rule out collisional excitation producing vibrationally excited states,
+%since at such high densities, the rotational $v=0$ states would necessarily
+%be thermalized to the same temperature as the vibrational states, contrary
+%to what we observe.
+
+The NaCl transitions we observe have  Einstein A values in the range
+$A\sim10^{-3}-10^{-2}$ s$^{-1}$, while the vibrationally excited states have
+infrared transitions with rates $A\sim1$ s$^{-1}$
+\cite{Barton2014a,Cabezas2016a}.  The collision rates into the $v=0$ states are
+$C\sim10^{-11}$ cm$^3$ s$^{-1}$ (insensitive to temperature), while collision
+rates into $v>0$ states from $v=0$ states are lower, $C\sim10^{-13}-10^{-12}$
+cm$^3$ s$^{-1}$ at $T=1000$ K, but only $C < 10^{-15}$  cm$^3$ s$^{-1}$ at
+$T=100$ K \cite{Quintana-Lacaci2016a}.  Thus, extremely high gas temperatures
+and densities would be required to collisionally excite a significant
+population of the molecules into vibrational states; collisional excitation
+alone also cannot explain different vibrational states being observed at a
+similar brightness level.
 
 
 
@@ -697,6 +753,13 @@ onto grains.  While plausible, there are many processes that need to coincide
 perfectly in this scenario (disk temperature history, gas density, gas-phase
 formation rates), so we favor the dust destruction hypotheses.
 
+We note that, if the formation rates of NaCl and KCl are very high, it is
+possible that the vibrational excitation observed is from the chemical energy
+of formation.  However, because of the short expected lifetimes of the
+vibrationally excited states, we regard this explanation for the excitation as
+very unlikely.
+
+
 \textbf{(3) Thermal desorption from grain surfaces}
 \citet{Decin2016a} presented a model for the gas-phase abundance of
 NaCl in which it is thermally desorbed from grains at grain temperatures
@@ -717,10 +780,10 @@ since small dust grains may pervade the system.
 
 
 \subsection{Other salts}
-While NaCl and KCl are clearly detected here, there are also several transitions of
-AlCl and AlF in our observational bands that were not detected.
-\citet{Cernicharo1987a} detected these transitions at comparable brightness to NaCl
-and KCl in IRC+10216.  The lack of AlCl may be because \sourcei's disk is
+While NaCl and KCl are clearly detected here, there are also several
+transitions of AlCl and AlF in our observational bands that were not detected.
+\citet{Cernicharo1987a} detected these transitions at comparable brightness to
+NaCl and KCl in IRC+10216.  The lack of AlCl may be because \sourcei's disk is
 oxygen-rich, and aluminum is locked into AlOH, as suggested in the
 \citet{Cherchneff2012a} model.  Indeed, the tentative detection of AlO
 in our spectra supports this conclusion.
@@ -767,7 +830,11 @@ representative of the class of high-mass protostars with disks; if the latter,
 these lines and potentially many others can be used to probe the radiation
 environment of extremely embedded high-mass protostars.  An obvious next step
 is to search for these lines in other resolved disks around high-mass
-protostars \citep[e.g.  HH80/81;][]{Girart2017a}.
+protostars \citep[e.g.  HH80/81;][]{Girart2017a}.  These species are
+particularly interesting for future millimeter and centimeter wavelength
+observatories like the ngVLA and SKA, since they have lower-J transitions into
+the few centimeter range, wavelengths at which the dust is very likely
+to be optically thin even in the inner few AU of a disk.
 
 The detection of these species with substantial population in vibrationally
 excited states highlights the need for laboratory work to measure such
@@ -812,7 +879,13 @@ destroyed nearly immediately after being raised from the surface of the disk.
 This hints that immediate dust destruction is an integral part of the outflow
 driving process.
 
-%These lines trace a rare physical phenomenon.  They are therefore an excellent tracer
+Given the rarity of these molecules, if they can be detected elsewhere,
+they will serve as a powerful and unique probe of local conditions.
+They may be the best available molecular tool to find disks around high-mass
+protostars and measure their kinematics.  
+
+%These lines trace a rare physical phenomenon.  They are therefore an excellent
+%tracer
 %of this phenomenon, assuming they are detected
 
 
@@ -844,7 +917,11 @@ and
 from the
 \texttt{radio-astro-tools} package
 (\url{radio-astro-tools.github.io}), \texttt{astropy}
-\citep{Astropy-Collaboration2013a}, \texttt{astroquery}
+\citep{Astropy-Collaboration2013a},
+\texttt{scipy} \citep{Scipy2001a},
+\texttt{numpy} \citep{Numpy2006a},
+\texttt{matplotlib} \citep{Matplotlib},
+\texttt{astroquery}
 \citep[][and~\url{astroquery.readthedocs.io}]{Ginsburg2018Astroquery}
 and \texttt{CASA} \citep{McMullin2007a}.
 A script to produce the collision rate table file using the fortran code
