--- a/science.tex
+++ b/science.tex
@@ -819,9 +819,8 @@ provided a Fortran code to compute those rates.  Typical collision rate
 coefficients for \hbox{$\Delta$J=1} or \hbox{$\Delta$J=2} transitions are
 $10^{-10}$~cm$^3$ \pers.  Making the usual assumption that the collision rates
 with \hh are similar to those for He, we used RADEX \cite{van-der-Tak2007a} to
-examine the excitation \footnote{The
-RADEX-compatible molecular data
-file incorporating these coefficients is available from
+examine the excitation \footnote{The RADEX-compatible molecular data file
+incorporating these coefficients is available from
 \texttt{https://github.com/keflavich/SaltyDisk/blob/bfd7419/nacl.dat}}.
 %For T=100 K, $\delta v=1$ \kms \perpc, $N_{NaCl}=10^{12}$ \persc,
 % \footnote{\rlp{presumably,
