--- a/extracted.bib
+++ b/extracted.bib
@@ -412,6 +412,98 @@
   eid =           {L32},
 }
 
+@article{Girart2017a,
+  author =        {{Girart}, J.~M. and {Estalella}, R. and
+                   {Fern{\'a}ndez-L{\'o}pez}, M. and {Curiel}, S. and
+                   {Frau}, P. and {Galvan-Madrid}, R. and {Rao}, R. and
+                   {Busquet}, G. and {Ju{\'a}rez}, C.},
+  journal =       {\apj},
+  month =         sep,
+  pages =         {58},
+  title =         {{The Circumestellar Disk of the B0 Protostar Powering
+                   the HH 80-81 Radio Jet}},
+  volume =        {847},
+  year =          {2017},
+  abstract =      {We present subarcsecond angular resolution
+                   observations carried out with the Submillimeter Array
+                   (SMA) at 880 mum centered at the B0-type protostar
+                   GGD27 MM1, the driving source of the parsec scale HH
+                   80-81 jet. We constrain its polarized continuum
+                   emission to ≲0.8% at this wavelength. Its
+                   submillimeter spectrum is dominated by sulfur-bearing
+                   species tracing a rotating-disk-like structure (SO
+                   and SO2 isotopologues mainly), but also shows
+                   HCN-bearing and CH3OH lines, which trace the disk and
+                   the outflow cavity walls excavated by the HH 80-81
+                   jet. The presence of many sulfurated lines could
+                   indicate the presence of shocked gas at the disk's
+                   centrifugal barrier or that MM1 is a hot core at an
+                   evolved stage. The resolved SO2 emission traces the
+                   disk kinematics very well and we fit the SMA
+                   observations using a thin-disk Keplerian model, which
+                   gives the inclination (47$\,^{\circ}$), the inner
+                   (≲170 au) and outer (˜950-1300 au) radii, and the
+                   disk's rotation velocity (3.4 km s-1 at a putative
+                   radius of 1700 au). We roughly estimate a
+                   protostellar dynamical mass of 4-18 {M}&sun; . MM2
+                   and WMC cores show, comparatively, an almost empty
+                   spectra, suggesting that they are associated with
+                   extended emission detected in previous low-angular
+                   resolution observations, and therefore indicating
+                   youth (MM2) or the presence of a less massive object
+                   (WMC).},
+  doi =           {10.3847/1538-4357/aa81c9},
+  eid =           {58},
+}
+
+@article{Goddi2018a,
+  author =        {{Goddi}, C. and {Ginsburg}, A. and {Maud}, L. and
+                   {Zhang}, Q. and {Zapata}, L.},
+  journal =       {ArXiv e-prints},
+  month =         may,
+  title =         {{Accretion and outflow structures within 1000 AU from
+                   high-mass protostars with ALMA longest baselines}},
+  year =          {2018},
+  abstract =      {Understanding the formation of massive stars is one
+                   of the unsolved problems in modern astronomy. The
+                   main difficulty is that the intense radiation from
+                   the high-luminosity stars and the thermal pressure
+                   from the resulting ionized gas (both insignificant
+                   for low-mass stars) may be able to reverse the
+                   accretion flow and prevent the star from accreting
+                   fresh material. Such feedback effects can naturally
+                   be mitigated if accretion proceeds through discs,
+                   which is the established mechanism to form sun-like
+                   stars. However, recent 3D MHD simulations have shown
+                   that accretion on 1000 au scales is through filaments
+                   rather than a large disc. This theoretical prediction
+                   has never been confirmed via observations owing to
+                   the poor linear resolution of previous studies (>1000
+                   au). Here we present the first observational evidence
+                   that mass assembly in young high-mass stars forming
+                   in protoclusters is predominantly asymmetric and
+                   disordered. In particular, we observed the innermost
+                   regions around three deeply embedded high-mass
+                   protostars with very high spatial resolution (~100
+                   au). We identified multiple massive (several solar
+                   masses), warm (50-150 Kelvin) filamentary streamers
+                   pointing onto the central sources, which we interpret
+                   as multi-directional accretion channels. These
+                   structures inhibit the formation of a large, steady
+                   disc. Nevertheless, the identification of fast
+                   collimated outflows in the three observed systems
+                   indicates that (non-steady) compact discs may be
+                   present (we measure upper limits on their radii of
+                   <80 for one object and <350 astronomical units for
+                   the remaining two objects). Our finding contrasts
+                   with the simplified classic paradigm of an ordered
+                   (and stable) disc/jet system and provides an
+                   experimental confirmation of a multi-directional and
+                   unsteady accretion model for massive star formation
+                   supported by recent 3D (magneto)hydrodynamic
+                   simulations.},
+}
+
 @article{Cesaroni2017a,
   author =        {{Cesaroni}, R. and {S{\'a}nchez-Monge}, {\'A}. and
                    {Beltr{\'a}n}, M.~T. and {Johnston}, K.~G. and
@@ -491,54 +583,6 @@
   eid =           {A59},
 }
 
-@article{Goddi2018a,
-  author =        {{Goddi}, C. and {Ginsburg}, A. and {Maud}, L. and
-                   {Zhang}, Q. and {Zapata}, L.},
-  journal =       {ArXiv e-prints},
-  month =         may,
-  title =         {{Accretion and outflow structures within 1000 AU from
-                   high-mass protostars with ALMA longest baselines}},
-  year =          {2018},
-  abstract =      {Understanding the formation of massive stars is one
-                   of the unsolved problems in modern astronomy. The
-                   main difficulty is that the intense radiation from
-                   the high-luminosity stars and the thermal pressure
-                   from the resulting ionized gas (both insignificant
-                   for low-mass stars) may be able to reverse the
-                   accretion flow and prevent the star from accreting
-                   fresh material. Such feedback effects can naturally
-                   be mitigated if accretion proceeds through discs,
-                   which is the established mechanism to form sun-like
-                   stars. However, recent 3D MHD simulations have shown
-                   that accretion on 1000 au scales is through filaments
-                   rather than a large disc. This theoretical prediction
-                   has never been confirmed via observations owing to
-                   the poor linear resolution of previous studies (>1000
-                   au). Here we present the first observational evidence
-                   that mass assembly in young high-mass stars forming
-                   in protoclusters is predominantly asymmetric and
-                   disordered. In particular, we observed the innermost
-                   regions around three deeply embedded high-mass
-                   protostars with very high spatial resolution (~100
-                   au). We identified multiple massive (several solar
-                   masses), warm (50-150 Kelvin) filamentary streamers
-                   pointing onto the central sources, which we interpret
-                   as multi-directional accretion channels. These
-                   structures inhibit the formation of a large, steady
-                   disc. Nevertheless, the identification of fast
-                   collimated outflows in the three observed systems
-                   indicates that (non-steady) compact discs may be
-                   present (we measure upper limits on their radii of
-                   <80 for one object and <350 astronomical units for
-                   the remaining two objects). Our finding contrasts
-                   with the simplified classic paradigm of an ordered
-                   (and stable) disc/jet system and provides an
-                   experimental confirmation of a multi-directional and
-                   unsteady accretion model for massive star formation
-                   supported by recent 3D (magneto)hydrodynamic
-                   simulations.},
-}
-
 @article{McGuire2018c,
   author =        {{McGuire}, B.~A.},
   journal =       {ArXiv e-prints},
@@ -563,6 +607,87 @@
                    disks, and exoplanetary atmospheres are provided. A
                    number of visual representations of this aggregate
                    data are presented and briefly discussed in context.},
+}
+
+@article{Nummelin1998a,
+  author =        {{Nummelin}, A. and {Bergman}, P. and
+                   {Hjalmarson}, {\AA}. and {Friberg}, P. and
+                   {Irvine}, W.~M. and {Millar}, T.~J. and {Ohishi}, M. and
+                   {Saito}, S.},
+  journal =       {\apjs},
+  month =         jul,
+  pages =         {427-529},
+  title =         {{A Three-Position Spectral Line Survey of Sagittarius
+                   B2 between 218 and 263 GHz. I. The Observational
+                   Data}},
+  volume =        {117},
+  year =          {1998},
+  abstract =      {We have surveyed the frequency band 218.30-263.55 GHz
+                   toward the core positions N and M and the quiescent
+                   cloud position NW in the Sgr B2 molecular cloud using
+                   the Swedish-ESO Submillimetre Telescope. In total
+                   1730, 660, and 110 lines were detected in N, M, and
+                   NW, respectively, and 42 different molecular species
+                   were identified. The number of unidentified lines are
+                   337, 51, and eight. Toward the N source, spectral
+                   line emission constitutes 22% of the total detected
+                   flux in the observed band, and complex organic
+                   molecules are the main contributors. Toward M, 14% of
+                   the broadband flux is caused by lines, and SO2 is
+                   here the dominant source of emission. NW is
+                   relatively poor in spectral lines and continuum. In
+                   this paper we present the spectra together with
+                   tables of suggested line identifications.},
+  doi =           {10.1086/313126},
+}
+
+@article{Belloche2013a,
+  author =        {{Belloche}, A. and {M{\"u}ller}, H.~S.~P. and
+                   {Menten}, K.~M. and {Schilke}, P. and {Comito}, C.},
+  journal =       {ArXiv e-prints},
+  month =         aug,
+  title =         {{Complex organic molecules in the interstellar
+                   medium: IRAM 30 m line survey of Sagittarius B2(N)
+                   and (M)}},
+  year =          {2013},
+  abstract =      {The discovery of amino acids in meteorites and the
+                   detection of glycine in samples returned from a comet
+                   to Earth suggest that the interstellar chemistry is
+                   capable of producing such complex organic molecules.
+                   Our goal is to investigate the degree of chemical
+                   complexity that can be reached in the ISM. We
+                   performed an unbiased, spectral line survey toward
+                   Sgr B2(N) and (M) with the IRAM 30m telescope in the
+                   3mm window. The spectra were analyzed with a simple
+                   radiative transfer model that assumes LTE but takes
+                   optical depth effects into account. About 3675 and
+                   945 spectral lines with a peak signal-to-noise ratio
+                   higher than 4 are detected toward N and M, i.e. about
+                   102 and 26 lines per GHz, respectively. This
+                   represents an increase by about a factor of 2 over
+                   previous surveys of Sgr B2. About 70% and 47% of the
+                   lines detected toward N and M are identified and
+                   assigned to 56 and 46 distinct molecules as well as
+                   to 66 and 54 less abundant isotopologues of these
+                   molecules, respectively. We also report the detection
+                   of transitions from 59 and 24 catalog entries
+                   corresponding to vibrationally or torsionally excited
+                   states of some of these molecules, respectively.
+                   Excitation temperatures and column densities were
+                   derived for each species but should be used with
+                   caution. Among the detected molecules,
+                   aminoacetonitrile, n-propyl cyanide, and ethyl
+                   formate were reported for the first time in space
+                   based on this survey, as were 5 rare isotopologues of
+                   vinyl cyanide, cyanoacetylene, and hydrogen cyanide.
+                   We also report the detection of transitions from
+                   within 12 new vib. or tors. excited states of known
+                   molecules. Although the large number of unidentified
+                   lines may still allow future identification of new
+                   molecules, we expect most of these lines to belong to
+                   vib. or tors. excited states or to rare isotopologues
+                   of known molecules for which spectroscopic
+                   predictions are currently missing. (abridged)},
 }
 
 @article{Cernicharo1987a,
@@ -1596,37 +1721,6 @@
   eid =           {A44},
 }
 
-@article{Hirota2017a,
-  author =        {{Hirota}, T. and {Machida}, M.~N. and
-                   {Matsushita}, Y. and {Motogi}, K. and {Matsumoto}, N. and
-                   {Kim}, M. and {Burns}, R.~A. and {Honma}, M.},
-  journal =       {ArXiv e-prints},
-  month =         nov,
-  title =         {{ALMA observations of submillimeter H2O and SiO lines
-                   in Orion Source I}},
-  year =          {2017},
-  abstract =      {We present observational results of the submillimeter
-                   H2O and SiO lines toward a candidate high-mass young
-                   stellar object Orion Source I using ALMA. The spatial
-                   structures of the high excitation lines at
-                   lower-state energies of >2500 K show compact
-                   structures consistent with the circumstellar disk
-                   and/or base of the northeast-southwest bipolar
-                   outflow with a 100 au scale. The highest excitation
-                   transition, the SiO (v=4) line at band 8, has the
-                   most compact structure. In contrast, lower-excitation
-                   transitions are more extended than 200 au tracing the
-                   outflow. Almost all the line show velocity gradients
-                   perpendicular to the outflow axis suggesting rotation
-                   motions of the circumstellar disk and outflow. While
-                   some of the detected lines show broad line profiles
-                   and spatially extended emission components indicative
-                   of thermal excitation, the strong H2O lines at 321
-                   GHz, 474 GHz, and 658 GHz with brightness
-                   temperatures of >1000 K show clear signatures of
-                   maser action.},
-}
-
 @article{Baez-Rubio2018a,
   author =        {{B{\'a}ez-Rubio}, A. and {Jim{\'e}nez-Serra}, I. and
                    {Mart{\'{\i}}n-Pintado}, J. and {Zhang}, Q. and
@@ -1858,131 +1952,6 @@
   eid =           {A12},
 }
 
-@article{Nummelin1998a,
-  author =        {{Nummelin}, A. and {Bergman}, P. and
-                   {Hjalmarson}, {\AA}. and {Friberg}, P. and
-                   {Irvine}, W.~M. and {Millar}, T.~J. and {Ohishi}, M. and
-                   {Saito}, S.},
-  journal =       {\apjs},
-  month =         jul,
-  pages =         {427-529},
-  title =         {{A Three-Position Spectral Line Survey of Sagittarius
-                   B2 between 218 and 263 GHz. I. The Observational
-                   Data}},
-  volume =        {117},
-  year =          {1998},
-  abstract =      {We have surveyed the frequency band 218.30-263.55 GHz
-                   toward the core positions N and M and the quiescent
-                   cloud position NW in the Sgr B2 molecular cloud using
-                   the Swedish-ESO Submillimetre Telescope. In total
-                   1730, 660, and 110 lines were detected in N, M, and
-                   NW, respectively, and 42 different molecular species
-                   were identified. The number of unidentified lines are
-                   337, 51, and eight. Toward the N source, spectral
-                   line emission constitutes 22% of the total detected
-                   flux in the observed band, and complex organic
-                   molecules are the main contributors. Toward M, 14% of
-                   the broadband flux is caused by lines, and SO2 is
-                   here the dominant source of emission. NW is
-                   relatively poor in spectral lines and continuum. In
-                   this paper we present the spectra together with
-                   tables of suggested line identifications.},
-  doi =           {10.1086/313126},
-}
-
-@article{Belloche2013a,
-  author =        {{Belloche}, A. and {M{\"u}ller}, H.~S.~P. and
-                   {Menten}, K.~M. and {Schilke}, P. and {Comito}, C.},
-  journal =       {ArXiv e-prints},
-  month =         aug,
-  title =         {{Complex organic molecules in the interstellar
-                   medium: IRAM 30 m line survey of Sagittarius B2(N)
-                   and (M)}},
-  year =          {2013},
-  abstract =      {The discovery of amino acids in meteorites and the
-                   detection of glycine in samples returned from a comet
-                   to Earth suggest that the interstellar chemistry is
-                   capable of producing such complex organic molecules.
-                   Our goal is to investigate the degree of chemical
-                   complexity that can be reached in the ISM. We
-                   performed an unbiased, spectral line survey toward
-                   Sgr B2(N) and (M) with the IRAM 30m telescope in the
-                   3mm window. The spectra were analyzed with a simple
-                   radiative transfer model that assumes LTE but takes
-                   optical depth effects into account. About 3675 and
-                   945 spectral lines with a peak signal-to-noise ratio
-                   higher than 4 are detected toward N and M, i.e. about
-                   102 and 26 lines per GHz, respectively. This
-                   represents an increase by about a factor of 2 over
-                   previous surveys of Sgr B2. About 70% and 47% of the
-                   lines detected toward N and M are identified and
-                   assigned to 56 and 46 distinct molecules as well as
-                   to 66 and 54 less abundant isotopologues of these
-                   molecules, respectively. We also report the detection
-                   of transitions from 59 and 24 catalog entries
-                   corresponding to vibrationally or torsionally excited
-                   states of some of these molecules, respectively.
-                   Excitation temperatures and column densities were
-                   derived for each species but should be used with
-                   caution. Among the detected molecules,
-                   aminoacetonitrile, n-propyl cyanide, and ethyl
-                   formate were reported for the first time in space
-                   based on this survey, as were 5 rare isotopologues of
-                   vinyl cyanide, cyanoacetylene, and hydrogen cyanide.
-                   We also report the detection of transitions from
-                   within 12 new vib. or tors. excited states of known
-                   molecules. Although the large number of unidentified
-                   lines may still allow future identification of new
-                   molecules, we expect most of these lines to belong to
-                   vib. or tors. excited states or to rare isotopologues
-                   of known molecules for which spectroscopic
-                   predictions are currently missing. (abridged)},
-}
-
-@article{Girart2017a,
-  author =        {{Girart}, J.~M. and {Estalella}, R. and
-                   {Fern{\'a}ndez-L{\'o}pez}, M. and {Curiel}, S. and
-                   {Frau}, P. and {Galvan-Madrid}, R. and {Rao}, R. and
-                   {Busquet}, G. and {Ju{\'a}rez}, C.},
-  journal =       {\apj},
-  month =         sep,
-  pages =         {58},
-  title =         {{The Circumestellar Disk of the B0 Protostar Powering
-                   the HH 80-81 Radio Jet}},
-  volume =        {847},
-  year =          {2017},
-  abstract =      {We present subarcsecond angular resolution
-                   observations carried out with the Submillimeter Array
-                   (SMA) at 880 mum centered at the B0-type protostar
-                   GGD27 MM1, the driving source of the parsec scale HH
-                   80-81 jet. We constrain its polarized continuum
-                   emission to ≲0.8% at this wavelength. Its
-                   submillimeter spectrum is dominated by sulfur-bearing
-                   species tracing a rotating-disk-like structure (SO
-                   and SO2 isotopologues mainly), but also shows
-                   HCN-bearing and CH3OH lines, which trace the disk and
-                   the outflow cavity walls excavated by the HH 80-81
-                   jet. The presence of many sulfurated lines could
-                   indicate the presence of shocked gas at the disk's
-                   centrifugal barrier or that MM1 is a hot core at an
-                   evolved stage. The resolved SO2 emission traces the
-                   disk kinematics very well and we fit the SMA
-                   observations using a thin-disk Keplerian model, which
-                   gives the inclination (47$\,^{\circ}$), the inner
-                   (≲170 au) and outer (˜950-1300 au) radii, and the
-                   disk's rotation velocity (3.4 km s-1 at a putative
-                   radius of 1700 au). We roughly estimate a
-                   protostellar dynamical mass of 4-18 {M}&sun; . MM2
-                   and WMC cores show, comparatively, an almost empty
-                   spectra, suggesting that they are associated with
-                   extended emission detected in previous low-angular
-                   resolution observations, and therefore indicating
-                   youth (MM2) or the presence of a less massive object
-                   (WMC).},
-  doi =           {10.3847/1538-4357/aa81c9},
-  eid =           {58},
-}
-
 @article{Fortman2012a,
   author =        {{Fortman}, S.~M. and {McMillan}, J.~P. and
                    {Neese}, C.~F. and {Randall}, S.~K. and
@@ -2100,6 +2069,20 @@
                    versions.},
   doi =           {10.1051/0004-6361/201322068},
   eid =           {A33},
+}
+
+@misc{Numpy2006a,
+  author =        {Travis E Oliphant},
+  howpublished =  {Trelgol Publishing},
+  title =         {A guide to NumPy},
+  year =          {2006},
+}
+
+@misc{Matplotlib,
+  author =        {John D Hunter},
+  howpublished =  {Computing in Science and Engineering, 9, 90-95},
+  title =         {Matplotlib: A 2D Graphics Environment},
+  year =          {2007},
 }
 
 @misc{Ginsburg2018Astroquery,
