--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -918,7 +918,7 @@ from the
 \texttt{radio-astro-tools} package
 (\url{radio-astro-tools.github.io}), \texttt{astropy}
 \citep{Astropy-Collaboration2013a},
-\texttt{scipy} \citep{Scipy2001a},
+\texttt{scipy} \citep{Scipy2001},
 \texttt{numpy} \citep{Numpy2006a},
 \texttt{matplotlib} \citep{Matplotlib},
 \texttt{astroquery}
