--- a/extracted.bib
+++ b/extracted.bib
@@ -2071,6 +2071,14 @@
   eid =           {A33},
 }
 
+@misc{Scipy2001,
+  author =        {Eric Jones and Travis Oliphant and Pearu Peterson and
+                   others},
+  howpublished =  {http://www.scipy.org/},
+  title =         {{SciPy}: Open source scientific tools for {Python}},
+  year =          {2001--},
+}
+
 @misc{Numpy2006a,
   author =        {Travis E Oliphant},
   howpublished =  {Trelgol Publishing},
